...
            android:layout_height="match_parent"
            android:layout_below="@id/editImageText"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/first_name_signup"
                android:inputType="text" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
...
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:id="@+id/spinnerLayout">

                <Spinner
                    android:id="@+id/month"
                    android:layout_width="wrap_content"
                    android:padding="7dp"
                    android:layout_height="40dp" />

                <Spinner
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:padding="7dp"
                    android:layout_height="40dp" />

                <Spinner
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:padding="7dp"
                    android:layout_height="40dp" />

            </LinearLayout>

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingBottom="15dp"
                android:text="@string/relationship" />

            <Spinner
                android:id="@+id/relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/relationship"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp" />

            <EditText
                android:id="@+id/editGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/editGroup"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:background="@android:drawable/edit_text" />

            <EditText
                android:id="@+id/editPosition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/position_signup"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:background="@android:drawable/edit_text" />

            <EditText
                android:id="@+id/editInterests"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/editInterests"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
...
