...
            android:visibility="invisible" />

        <Button
            android:id="@+id/ProfileMessageBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/profileInterest"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
...
            android:layout_gravity="end"
            android:backgroundTint="@color/fui_transparent"
            android:src="@drawable/ic_star_border_black_24dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageFrame"
            android:layout_toEndOf="@id/imageFrame"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
...
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileName"
            android:paddingTop="15dp"
            android:text="@string/editGroup" />

        <TextView
            android:id="@+id/profileGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageFrame"
            android:paddingTop="30dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileGroup"
            android:text="@string/editPosition" />

        <TextView
            android:id="@+id/profilePosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileGroup"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePosition"
            android:text="@string/relationship" />

        <TextView
            android:id="@+id/profileRelationshipText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePosition"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
...
